--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="uft-8">
-        <title>R-P-S</title>
-        <link href="script.js" rel="scripts">
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Hello World</h1>
-    </body>
+
+<head>
+    <meta charset="uft-8">
+    <title>R-P-S</title>
+    <link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+    <h1>Hello World</h1>
+    <script>
+        function getComputerChoice() {
+            const pick = ["rock", "paper", "scissors"];
+            return pick[Math.floor(Math.random() * 3)];
+        }
+
+        function playRound(playerSelection,computerSelection){
+            winner = null;
+            if (playerSelection.charAt(0) === "r" && computerSelection.charAt(0) === "s"){
+                return winner = "player";
+            }
+            else if (playerSelection.charAt(0) === "p" && computerSelection.charAt(0) === "r"){
+                return winner = "player";
+            }
+            else if (playerSelection.charAt(0) === "s" && computerSelection.charAt(0) === "p"){
+                return winner = "player";
+            }
+            else if (playerSelection.charAt(0) ===  computerSelection.charAt(0)){
+                return winner = "tie";
+            }
+            else{
+                return winner = "computer";
+            }
+        }
+
+        function playGame(){
+            let playerWins = 0;
+            let computerWins = 0;
+            let finalWinner = null;
+            for (let i = 0;i < 5; i++){
+                // aqui agregar un while para cuando cualquiera es menor a 3 W
+            const playerSelection = prompt("Rock, paper, or scissors?");
+            const computerSelection = getComputerChoice();
+            winner = playRound(playerSelection,computerSelection);
+            if (winner == "player"){
+                return "You won!";
+                playerWins =+ 1;
+            }
+            else if (winner == "computer"){
+                return `You lost, the computer chose ${computerSelection}!`;
+                computerWins =+ 1;
+            }
+            else if (winner == "tie"){
+                return "It is a tie!";
+            }
+            }
+        }
+
+        console.log(playGame());
+        
+    </script>
+</body>
+
 </html>
