--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>RPS</h1>
     <script>
         function getComputerChoice() {
             const pick = ["rock", "paper", "scissors"];
             return pick[Math.floor(Math.random() * 3)];
         }
 
-        function playRound(playerSelection,computerSelection){
+        function playRound(playerSelection, computerSelection) {
             winner = null;
-            if (playerSelection.charAt(0) === "r" && computerSelection.charAt(0) === "s"){
+            if (playerSelection.charAt(0) === "r" && computerSelection.charAt(0) === "s") {
                 return winner = "player";
             }
-            else if (playerSelection.charAt(0) === "p" && computerSelection.charAt(0) === "r"){
+            else if (playerSelection.charAt(0) === "p" && computerSelection.charAt(0) === "r") {
                 return winner = "player";
             }
-            else if (playerSelection.charAt(0) === "s" && computerSelection.charAt(0) === "p"){
+            else if (playerSelection.charAt(0) === "s" && computerSelection.charAt(0) === "p") {
                 return winner = "player";
             }
-            else if (playerSelection.charAt(0) ===  computerSelection.charAt(0)){
+            else if (playerSelection.charAt(0) === computerSelection.charAt(0)) {
                 return winner = "tie";
             }
             else{
@@ -34,31 +34,29 @@
             }
         }
 
-        function playGame(){
+        function playGame() {
             let playerWins = 0;
             let computerWins = 0;
-            let finalWinner = null;
-            for (let i = 0;i < 5; i++){
-                // aqui agregar un while para cuando cualquiera es menor a 3 W
-            const playerSelection = prompt("Rock, paper, or scissors?");
-            const computerSelection = getComputerChoice();
-            winner = playRound(playerSelection,computerSelection);
-            if (winner == "player"){
-                return "You won!";
-                playerWins =+ 1;
+                while (playerWins < 3 && computerWins < 3) {
+                    const playerSelection = prompt("Rock, paper, or scissors?");
+                    const computerSelection = getComputerChoice();
+                    winner = playRound(playerSelection, computerSelection);
+                    if (winner == "player") {
+                        console.log("You won!");
+                        playerWins += 1;
+                    }
+                    else if (winner == "computer") {
+                        console.log(`You lost, the computer chose ${computerSelection}!`);
+                        computerWins += 1;
+                    }
+                    else if (winner == "tie") {
+                        console.log("It is a tie!");
+                    }
+                }
+            finalWinner = (playerWins === 3) ? "player" : "computer";
+            return `The final winner is the ${finalWinner}, with three wins!`;
             }
-            else if (winner == "computer"){
-                return `You lost, the computer chose ${computerSelection}!`;
-                computerWins =+ 1;
-            }
-            else if (winner == "tie"){
-                return "It is a tie!";
-            }
-            }
-        }
-
         console.log(playGame());
-        
     </script>
 </body>
 
