Creative CSS incorpotation, class disable and enable

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 
     <div class="scoreContainer">
       <div class="robot">
-        <p id="robotScore">Computer 0</p>
+        <p>Computer</p>
+        <p id="robotScore">0</p>
       </div>
       <div class="human">
-        <p id="humanScore">Human 0</p>
+        <p>Human</p>
+        <p id="humanScore">0</p>
       </div>
     </div>
     <button type="button" class="optionsAfterGame" id="playAgain">Play again?</button>
